# ARMOR

./: .env.pluck-debug  .gitignore  .golangci.yml  .needle-predispatch-sha  .needle.yaml  Cargo.toml  Dockerfile  PROGRESS.md  README.md  VERSION  analyze-pluck-debug.sh  armor_deployments.json  bf-135k-pluck-debug-comprehensive-execution-summary.md  bf-135k-pluck-debug-execution-summary.md  bf-135k-pluck-debug-final-execution-summary.md  bf-135k-pluck-final-execution-summary.md  bf-2a35-pluck-debug-execution-summary.md  bf-2unui-version-gap-summary.md  bf-2ux9-pluck-debug-execution-summary.md  bf-3bqg-pluck-debug-configuration.md  bf-3d99-pluck-debug-verification-summary.md  bf-3x9aw-debug-config-validation-current.md  bf-4w84p-pluck-dependencies-version-verification-report.md  bf-4zvc-pluck-debug-execution-summary.md  bf-5b8qr-pluck-dependencies-audit.md  bf-5bmp-pluck-debug-verification.md  bf-6a7c-pluck-debug-execution-summary.md  bf-6a7c-pluck-debug-summary.md  bf-kwhz-pluck-debug-execution-summary.md  bf-kwhz-pluck-debug-execution.md  bf-n5wc-pluck-validation-report.md  bf-ox4g-pluck-debug-execution-summary.md  capture-pluck-debug.sh  coverage.html  debug_classification.rs  execute-pluck-bf-135k.sh  execute-pluck-bf-2ux9.sh  execute-pluck-bf-3d99.sh  execute-pluck-bf-3jus.sh  execute-pluck-bf-4q1w.sh  (+51 more)
.beads/: beads.db.backup.20260709034000  beads.db.backup.20260709035230  beads.db.backup.20260709035504  beads.db.backup.20260709041629  beads.db.backup.20260709043525  beads.db.backup.20260709043546  beads.db.backup.20260709043712  beads.db.backup.20260709043811  (+53 more)
(+3663 files in other folders)
